--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"					: "node-utils",
-	"version"				: "0.0.1",
+	"version"				: "0.0.2",
 	"author"				: "Robert Schultz <robert@cosmicrealms.com>",
 	"description"			: "private package for utils",
 	"private"				: true,
@@ -8,6 +8,9 @@
 	"dependencies"			:
 	{
 		"node-base"			: "git://github.com/Sembiance/node-base.git",
-		"step"				: "git://github.com/Sembiance/step.git"
+		"step"				: "git://github.com/Sembiance/step.git",
+		"node-uuid"			: ">= 1.4.0",
+		"dustjs-linkedin"   : ">= 1.1.1",
+		"unicode"			: ">= 0.4.3"
 	}
 }
