--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
 	"name"					: "node-utils",
-	"version"				: "0.0.6",
+	"version"				: "0.0.7",
 	"author"				: "Robert Schultz <robert@cosmicrealms.com>",
 	"description"			: "private package for utils",
 	"private"				: true,
 	"main"					: "index.js",
 	"dependencies"			:
 	{
-		"node-base"			: "git://github.com/Sembiance/node-base.git",
 		"step"				: "git://github.com/Sembiance/step.git",
 		"node-uuid"			: ">= 1.4.0",
 		"dustjs-linkedin"   : ">= 1.1.1",
-		"unicode"			: ">= 0.4.3"
+		"unicode"			: ">= 0.4.3",
+		"erbridge"			: ">= 0.1.4",
+		"node-base"			: ">= 0.1.4"
 	}
 }
