--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
 		"dustjs-linkedin"   : ">= 1.1.1",
 		"unicode"			: ">= 0.4.3",
 		"erbridge"			: ">= 0.1.4",
-		"node-base"			: ">= 0.1.4"
+		"node-base"			: "git://github.com/Sembiance/node-base.git"
 	}
 }
