--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"					: "xutil",
-	"version"				: "1.3.8",
+	"version"				: "1.3.9",
 	"author"				: "Robert Schultz <robert@cosmicrealms.com>",
 	"description"			: "common util functions I use in many of my node projects",
 	"private"				: true,
@@ -17,6 +17,7 @@
 		"erbridge"			: ">= 1.0.0",
 		"accounting"        : ">= 0.3.2",
 		"cli-color"         : ">= 0.2.3",
+		"ansidiff"			: ">= 1.0.0",
 		"xbase"				: "git://github.com/Sembiance/xbase.git"
 	}
 }
