--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"					: "xutil",
-	"version"				: "1.3.9",
+	"version"				: "1.3.10",
 	"author"				: "Robert Schultz <robert@cosmicrealms.com>",
 	"description"			: "common util functions I use in many of my node projects",
 	"private"				: true,
@@ -13,6 +13,7 @@
 		"dustjs-linkedin"   : ">= 2.2.2",
 		"dustjs-helpers"    : ">= 1.1.1",
 		"unicode"			: ">= 0.4.9",
+		"stream-buffers"    : ">= 0.2.5",
 		"rimraf"			: ">= 2.2.5",
 		"erbridge"			: ">= 1.0.0",
 		"accounting"        : ">= 0.3.2",
