--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"					: "xutil",
-	"version"				: "1.4.12",
+	"version"				: "1.5.0",
 	"author"				: "Robert Schultz <robert@cosmicrealms.com>",
 	"description"			: "common util functions I use in many of my node projects",
 	"private"				: true,
@@ -12,14 +12,15 @@
 		"tiptoe"			: "~1.0.0",
 		"erbridge"			: "~1.0.0",
 		"node-uuid"			: "~1.4.7",
-		"dustjs-linkedin"   : "~2.7.2",
+		"dustjs-linkedin"   : "~2.7.4",
 		"dustjs-helpers"    : "~1.7.3",
 		"unicode"			: "~0.6.1",
-		"stream-buffers"    : "~2.2.0",
+		"stream-buffers"    : "~3.0.1",
 		"rimraf"			: "~2.5.3",
 		"accounting"        : "~0.4.1",
 		"cli-color"         : "~1.1.0",
 		"ansidiff"			: "~1.0.0",
-		"urlencode"         : "~1.1.0"
+		"urlencode"         : "~1.1.0",
+		"sendgrid"			: "~4.7.1"
 	}
 }
