Switched module to private npm module and updated dependencies

--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-	"name"					: "xutil",
-	"version"				: "1.5.0",
+	"name"					: "@sembiance/xutil",
+	"version"				: "1.5.2",
 	"author"				: "Robert Schultz <robert@cosmicrealms.com>",
 	"description"			: "common util functions I use in many of my node projects",
-	"private"				: true,
 	"main"					: "index.js",
 	"repository"            : { "type" : "git", "url" : "https://github.com/Sembiance/xutil"},
 	"dependencies"			:
 	{
-		"xbase"				: "git://github.com/Sembiance/xbase.git",
-		"tiptoe"			: "~1.0.0",
-		"erbridge"			: "~1.0.0",
-		"node-uuid"			: "~1.4.7",
-		"dustjs-linkedin"   : "~2.7.4",
+		"@sembiance/xbase"	: ">=1.0.0",
+		"tiptoe"			: ">=1.0.0",
+		"erbridge"			: ">=1.0.0",
+		"uuid"				: "~3.0.1",
+		"dustjs-linkedin"   : "~2.7.5",
 		"dustjs-helpers"    : "~1.7.3",
 		"unicode"			: "~0.6.1",
 		"stream-buffers"    : "~3.0.1",
-		"rimraf"			: "~2.5.3",
+		"rimraf"			: "~2.5.4",
 		"accounting"        : "~0.4.1",
 		"cli-color"         : "~1.1.0",
 		"ansidiff"			: "~1.0.0",
