--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-	"name"					: "@sembiance/xutil",
-	"version"				: "1.6.2",
-	"author"				: "Robert Schultz <robert@cosmicrealms.com>",
-	"description"			: "common util functions I use in many of my node projects",
-	"main"					: "index.js",
-	"repository"            : { "type" : "git", "url" : "https://github.com/Sembiance/xutil"},
-	"dependencies"			:
-	{
-		"@sembiance/xbase"	: "~1.1.19",
-		"tiptoe"			: "~1.1.0",
-		"erbridge"			: "~1.0.0",
-		"uuid"				: "~3.1.0",
-		"dustjs-linkedin"   : "~2.7.5",
-		"dustjs-helpers"    : "~1.7.3",
-		"unicode"			: "~9.0.1",
-		"stream-buffers"    : "~3.0.1",
-		"rimraf"			: "~2.6.1",
-		"accounting"        : "~0.4.1",
-		"cli-color"         : "~1.2.0",
-		"ansidiff"			: "~1.0.0",
-		"urlencode"         : "~1.1.0",
-		"sendgrid"			: "~5.2.0"
+	"name": "@sembiance/xutil",
+	"version": "1.6.3",
+	"author": "Robert Schultz <robert@cosmicrealms.com>",
+	"description": "common util functions I use in many of my node projects",
+	"main": "index.js",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Sembiance/xutil"
+	},
+	"dependencies": {
+		"@sembiance/xbase": "~1.1.19",
+		"accounting": "~0.4.1",
+		"ansidiff": "~1.0.0",
+		"cli-color": "~1.2.0",
+		"dustjs-helpers": "~1.7.3",
+		"dustjs-linkedin": "~2.7.5",
+		"erbridge": "~1.0.0",
+		"rimraf": "~2.6.1",
+		"sendgrid": "~5.2.0",
+		"stream-buffers": "~3.0.1",
+		"tiptoe": "~1.1.0",
+		"unicode": "~9.0.1",
+		"urlencode": "~1.1.0",
+		"uuid": "~3.1.0",
+		"xxhash": "^0.2.4"
 	}
 }
