--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sembiance/xutil",
-	"version": "1.6.5",
+	"version": "1.7.0",
 	"author": "Robert Schultz <robert@cosmicrealms.com>",
 	"description": "common util functions I use in many of my node projects",
 	"main": "index.js",
@@ -26,6 +26,7 @@
 		"unicode": "~9.0.1",
 		"urlencode": "~1.1.0",
 		"uuid": "~3.1.0",
-		"xxhash": "^0.2.4"
+		"xxhash": "^0.2.4",
+		"chrome-remote-interface" : "~0.25.2"
 	}
 }
