--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "node": ">6.5.0"
   	},
 	"dependencies": {
-		"@sembiance/xbase": "file:/mnt/compendium/DevLab/node-modules/xbase",
-		"tiptoe": "file:/mnt/compendium/DevLab/node-modules/tiptoe",
+		"@sembiance/xbase": "*",
+		"tiptoe": "*",
 		"accounting": "~0.4.1",
 		"ansidiff": "~1.0.0",
 		"cli-color": "~1.2.0",
