--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"        : "@sembiance/xutil",
-	"version"     : "1.9.1",
+	"version"     : "1.10.0",
 	"author"      : "Robert Schultz <robert@cosmicrealms.com>",
 	"description" : "common util functions I use in many of my node projects",
 	"main"        : "index.js",
@@ -14,7 +14,7 @@
 	{
 		"@sembiance/xbase"        : "file:/mnt/compendium/DevLab/node-modules/xbase",
 		"tiptoe"                  : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
-		"accounting"              : "~0.4.1",
+		"@sembiance/cdpw"         : "file:/mnt/compendium/DevLab/node-modules/cdpw",
 		"ansidiff"                : "~1.0.0",
 		"cli-color"               : "~1.4.0",
 		"dustjs-helpers"          : "~1.7.3",
@@ -25,7 +25,6 @@
 		"unicode"                 : "~11.0.1",
 		"urlencode"               : "~1.1.0",
 		"uuid"                    : "~3.3.2",
-		"xxhash"                  : "^0.2.4",
-		"chrome-remote-interface" : "~0.27.0"
+		"xxhash"                  : "^0.2.4"
 	}
 }
