--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"         : "@sembiance/xutil",
-	"version"      : "1.11.0",
+	"version"      : "1.11.1",
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
@@ -19,7 +19,7 @@
 		"dustjs-helpers"  : "~1.7.3",
 		"dustjs-linkedin" : "~2.7.5",
 		"rimraf"          : "~2.6.1",
-		"sendgrid"        : "~5.2.0",
+		"@sendgrid/mail"  : "~6.3.1",
 		"stream-buffers"  : "~3.0.1",
 		"unicode"         : "~11.0.1",
 		"urlencode"       : "~1.1.0",
