--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"         : "@sembiance/xutil",
-	"version"      : "1.11.2",
+	"version"      : "1.12.0",
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
@@ -13,17 +13,17 @@
 	"dependencies" :
 	{
 		"@sembiance/xu"   : "file:/mnt/compendium/DevLab/node-modules/xu",
-		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
+		"@sendgrid/mail"  : "~6.3.1",
 		"ansidiff"        : "~1.0.0",
-		"cli-color"       : "~1.4.0",
+		"chalk"           : "~2.4.2",
 		"dustjs-helpers"  : "~1.7.3",
 		"dustjs-linkedin" : "~2.7.5",
 		"rimraf"          : "~2.6.1",
-		"@sendgrid/mail"  : "~6.3.1",
 		"stream-buffers"  : "~3.0.1",
+		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
 		"unicode"         : "~11.0.1",
 		"urlencode"       : "~1.1.0",
 		"uuid"            : "~3.3.2",
-		"xxhash"          : "^0.2.4"
+		"xxhash"          : "~0.2.4"
 	}
 }
