--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"         : "@sembiance/xutil",
-	"version"      : "1.14.0",
+	"version"      : "1.15.0",
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
@@ -18,6 +18,7 @@
 		"chalk"           : "~2.4.2",
 		"dustjs-helpers"  : "~1.7.3",
 		"dustjs-linkedin" : "~2.7.5",
+		"mkdirp"          : "^0.5.1",
 		"rimraf"          : "~2.6.1",
 		"stream-buffers"  : "~3.0.1",
 		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
