--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"         : "@sembiance/xutil",
-	"version"      : "1.16.0",
+	"version"      : "1.16.1",
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
@@ -24,7 +24,6 @@
 		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
 		"unicode"         : "~11.0.1",
 		"urlencode"       : "~1.1.0",
-		"uuid"            : "~3.3.2",
-		"xxhash"          : "~0.2.4"
+		"uuid"            : "~3.3.2"
 	}
 }
