--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"chalk"           : "~3.0.0",
 		"dustjs-helpers"  : "~1.7.3",
 		"dustjs-linkedin" : "~2.7.5",
-		"mkdirp"          : "^0.5.1",
+		"mkdirp"          : "~0.5.1",
+		"progress-stream" : "~2.0.0",
 		"rimraf"          : "~3.0.0",
 		"stream-buffers"  : "~3.0.1",
 		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
