--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"         : "@sembiance/xutil",
-	"version"      : "1.22.0",
+	"version"      : "1.23.0",
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
@@ -18,6 +18,7 @@
 		"chalk"           : "~3.0.0",
 		"dustjs-helpers"  : "~1.7.3",
 		"dustjs-linkedin" : "~2.7.5",
+		"glob"            : "~7.1.6",
 		"progress-stream" : "~2.0.0",
 		"rimraf"          : "~3.0.0",
 		"stream-buffers"  : "~3.0.1",
