--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
-	"engines"      : { "node" : ">8.5.0" },
+	"engines"      : { "node" : ">=14" },
 	"repository"   :
 	{
 		"type" : "git",
