--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
 	"name"         : "@sembiance/xutil",
-	"version"      : "1.25.0",
+	"version"      : "1.26.0",
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
 	"engines"      : { "node" : ">=14" },
-	"repository"   :
-	{
+	"repository"   : {
 		"type" : "git",
 		"url"  : "https://github.com/Sembiance/xutil"
 	},
-	"dependencies" :
-	{
+	"dependencies" : {
 		"@sembiance/xu"   : "file:/mnt/compendium/DevLab/node-modules/xu",
 		"@sendgrid/mail"  : "~6.4.0",
 		"ansidiff"        : "~1.0.0",
@@ -20,7 +18,6 @@
 		"dustjs-linkedin" : "~2.7.5",
 		"glob"            : "~7.1.6",
 		"progress-stream" : "~2.0.0",
-		"rimraf"          : "~3.0.0",
 		"stream-buffers"  : "~3.0.1",
 		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
 		"unicode"         : "~12.1.0",
