Fixed major issues with the latest runUtil. Pretty much reverted runUtil back to it's previous state and now I just split off the recording of video off to a seperate bin. Also updated a lot of the tests so you can run multiple copies of each test at the same time, useful for trying to suss out weird race conditions. fun.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name"         : "@sembiance/xutil",
-	"version"      : "1.27.0",
+	"version"      : "1.27.1",
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
@@ -21,7 +21,6 @@
 		"stream-buffers"  : "~3.0.1",
 		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
 		"unicode"         : "~12.1.0",
-		"urlencode"       : "~1.1.0",
-		"uuid"            : "~3.3.3"
+		"urlencode"       : "~1.1.0"
 	}
 }
