A quickOp static method for dosUtil

--- a/dos/manual_dosbox.conf
+++ b/dos/manual_dosbox.conf
@@ -83,7 +83,7 @@ scaler    = normal2x forced
 
 core      = auto
 cputype   = auto
-cycles    = auto
+cycles    = max
 cycleup   = 10
 cycledown = 20
 
