--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
 	"name"         : "@sembiance/xutil",
-	"version"      : "2.0.0",
+	"version"      : "3.0.0",
 	"author"       : "Robert Schultz <robert@cosmicrealms.com>",
 	"description"  : "common util functions I use in many of my node projects",
 	"main"         : "index.js",
 	"engines"      : { "node" : ">=14" },
+	"bin"          : { "virtualXRun" : "./bin/virtualXRun" },
 	"repository"   : {
 		"type" : "git",
 		"url"  : "https://github.com/Sembiance/xutil"
 	},
 	"dependencies" : {
 		"@sembiance/xu"   : "file:/mnt/compendium/DevLab/node-modules/xu",
-		"@sendgrid/mail"  : "~6.4.0",
+		"@sendgrid/mail"  : "~7.2.1",
 		"ansidiff"        : "~1.0.0",
-		"chalk"           : "~3.0.0",
+		"chalk"           : "~4.1.0",
 		"dustjs-helpers"  : "~1.7.3",
 		"dustjs-linkedin" : "~2.7.5",
 		"glob"            : "~7.1.6",
 		"progress-stream" : "~2.0.0",
+		"rimraf"          : "~3.0.2",
 		"stream-buffers"  : "~3.0.1",
 		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
 		"unicode"         : "~12.1.0",
