--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 		"chalk"           : "~4.1.0",
 		"dustjs-helpers"  : "~1.7.3",
 		"dustjs-linkedin" : "~2.7.5",
+		"ftp"             : "~0.3.10",
 		"glob"            : "~7.1.6",
 		"progress-stream" : "~2.0.0",
-		"rimraf"          : "~3.0.2",
 		"stream-buffers"  : "~3.0.1",
 		"tiptoe"          : "file:/mnt/compendium/DevLab/node-modules/tiptoe",
 		"unicode"         : "~12.1.0",
